[tool.poetry]
name = "resotoclient"
version = "0.1.0"
description = "Resoto Python client library"
authors = ["Some Engineering Inc."]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/someengineering/resoto-client-python"
repository = "https://github.com/someengineering/resoto-client-python"
packages = [
    { include = "resotoclient" },
]


[tool.poetry.urls]
Changelog = "https://github.com/someengineering/resoto-client-python/releases"

[tool.poetry.dependencies]
python = "^3.7"
jsons="1.6.1"
requests="2.27.1"
PyJWT="2.3.0"
cryptography="36.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
safety = "^1.10.3"
pyright = "^1.1.238"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
pep8-naming = "^0.12.1"

[tool.pyright]
include = ["resotoclient"]
exclude = ["**/node_modules",
    "**/__pycache__"
]
venvPath = "venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "." }
]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
