[tool.poetry]
name = "resotoclient"
version = "1.4.0"
description = "Resoto Python client library"
authors = ["Some Engineering Inc."]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/someengineering/resotoclient-python"
repository = "https://github.com/someengineering/resotoclient-python"
packages = [
    { include = "resotoclient" },
]
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/someengineering/resotoclient-python/releases"

[tool.poetry.dependencies]
python = "^3.9"
jsons="^1.6.1"
PyJWT="^2.3.0"
cryptography=">=36.0.2"
pandas = { version = "^1.4.2", optional = true }
graphviz = { version = "^0.20", optional = true }
aiohttp = "^3.8.1"
certifi = "^2022.9.24"


[tool.poetry.extras]
extras = ["pandas", "graphviz"]

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
safety = "^2.3.5"
pyright = "^1.1.304"
flake8 = "^6.0.0"
black = ">=22.12.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.23"
pep8-naming = "^0.13.3"
networkx = "^2.8"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19.0"

[tool.pyright]
include = ["resotoclient", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__"
]
venvPath = "venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "." }
]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
